# Fastapi_for_Beginners

./: main.py  pyproject.toml
