[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = "learning fastapi"
authors = ["NwoluDavid <nwoludave@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
bcrypt = "^4.1.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
